fix: fix gap too high

--- a/src/ui/views/Approval/style.less
+++ b/src/ui/views/Approval/style.less
@@ -942,7 +942,6 @@
     .send-text{
       font-size: 13px;
       color: #8697FF;
-      margin-bottom: 2px;
       max-width: 180px;
       overflow: hidden;
       text-overflow: ellipsis;
